Refactor tap, start, revive functions

--- a/.gitignore
+++ b/.gitignore
@@ -904,3 +904,66 @@ venv/lib/python3.8/site-packages/wheel-0.34.2.dist-info/METADATA
 venv/lib/python3.8/site-packages/wheel-0.34.2.dist-info/RECORD
 venv/lib/python3.8/site-packages/wheel-0.34.2.dist-info/top_level.txt
 venv/lib/python3.8/site-packages/wheel-0.34.2.dist-info/WHEEL
+venv/bin/mss
+venv/lib/python3.8/site-packages/mss/__init__.py
+venv/lib/python3.8/site-packages/mss/__main__.py
+venv/lib/python3.8/site-packages/mss/base.py
+venv/lib/python3.8/site-packages/mss/darwin.py
+venv/lib/python3.8/site-packages/mss/exception.py
+venv/lib/python3.8/site-packages/mss/factory.py
+venv/lib/python3.8/site-packages/mss/linux.py
+venv/lib/python3.8/site-packages/mss/models.py
+venv/lib/python3.8/site-packages/mss/screenshot.py
+venv/lib/python3.8/site-packages/mss/tools.py
+venv/lib/python3.8/site-packages/mss/windows.py
+venv/lib/python3.8/site-packages/mss/__pycache__/__init__.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/__main__.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/base.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/darwin.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/exception.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/factory.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/linux.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/models.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/screenshot.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/tools.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/__pycache__/windows.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/bench_bgra2rgb.py
+venv/lib/python3.8/site-packages/mss/tests/bench_general.py
+venv/lib/python3.8/site-packages/mss/tests/conftest.py
+venv/lib/python3.8/site-packages/mss/tests/test_bgra_to_rgb.py
+venv/lib/python3.8/site-packages/mss/tests/test_cls_image.py
+venv/lib/python3.8/site-packages/mss/tests/test_find_monitors.py
+venv/lib/python3.8/site-packages/mss/tests/test_get_pixels.py
+venv/lib/python3.8/site-packages/mss/tests/test_gnu_linux.py
+venv/lib/python3.8/site-packages/mss/tests/test_implementation.py
+venv/lib/python3.8/site-packages/mss/tests/test_leaks.py
+venv/lib/python3.8/site-packages/mss/tests/test_macos.py
+venv/lib/python3.8/site-packages/mss/tests/test_save.py
+venv/lib/python3.8/site-packages/mss/tests/test_setup.py
+venv/lib/python3.8/site-packages/mss/tests/test_third_party.py
+venv/lib/python3.8/site-packages/mss/tests/test_tools.py
+venv/lib/python3.8/site-packages/mss/tests/test_windows.py
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/bench_bgra2rgb.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/bench_general.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/conftest.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_bgra_to_rgb.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_cls_image.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_find_monitors.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_get_pixels.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_gnu_linux.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_implementation.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_leaks.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_macos.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_save.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_setup.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_third_party.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_tools.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/__pycache__/test_windows.cpython-38.pyc
+venv/lib/python3.8/site-packages/mss/tests/res/monitor-1024x768.raw
+venv/lib/python3.8/site-packages/mss-5.1.0.dist-info/entry_points.txt
+venv/lib/python3.8/site-packages/mss-5.1.0.dist-info/INSTALLER
+venv/lib/python3.8/site-packages/mss-5.1.0.dist-info/LICENSE
+venv/lib/python3.8/site-packages/mss-5.1.0.dist-info/METADATA
+venv/lib/python3.8/site-packages/mss-5.1.0.dist-info/RECORD
+venv/lib/python3.8/site-packages/mss-5.1.0.dist-info/top_level.txt
+venv/lib/python3.8/site-packages/mss-5.1.0.dist-info/WHEEL
