Added iterable screenshot of device screen

--- a/.gitignore
+++ b/.gitignore
@@ -2119,3 +2119,5 @@ venv/lib/python3.8/site-packages/Pillow-7.1.2.dist-info/zip-safe
 .gitignore
 gaps.png
 levelcomplete.png
+phone_screen.png
+sct-145x0_260x500.png
