--- a/.gitignore
+++ b/.gitignore
@@ -5206,3 +5206,6 @@ devenv/lib/python3.8/site-packages/opencv_python-4.2.0.34.dist-info/top_level.tx
 devenv/lib/python3.8/site-packages/opencv_python-4.2.0.34.dist-info/WHEEL
 .python-version
 requirements_dev.txt
+homescreen.png
+endline.png
+Screen Shot 2020-06-26 at 08.26.21.png
